--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ display:none;
 }
 
 .nodeIsIndex {
-  fill: #1399c6
+  fill: #B34E56
 }
 
 .nodeDoesNotHaveChildren {
@@ -569,50 +569,6 @@ text {
 
 <body translate="no" >
 <div id="full-container">
-  <!--button class="btn-action btn-fullscreen" onclick="params.funcs.toggleFullScreen()">Fullscreen
-    <span class='icon'/>
-    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
-    </span></button>
-<button class="btn-action btn-show-my-self" onclick="params.funcs.showMySelf()"> Show myself
-  <span class='icon'/>
-  <i class="fa fa-user" aria-hidden="true"></i>
-  </span>
-</button-->
-  <!--button class=" btn-action btn-search" onclick="params.funcs.search()"> Search <span class='icon'/> <i class="fa fa-search" aria-hidden="true"></i></span></button-->
-
-  <!--button class=" btn-action btn-back" onclick="params.funcs.back()"> Back <span class='icon'/> <i class="fa fa-arrow-left" aria-hidden="true"></i></span></button-->
-
-  <div class="department-information">
-    <div class="dept-name">
-      dept name
-    </div>
-    <div class="dept-emp-count">
-      dept description test, this is department description
-    </div>
-    <div class="dept-description">
-      dept description test, this is department description
-    </div>
-  </div>
-
-  <div class="user-search-box">
-    <div class="input-box">
-      <div class="close-button-wrapper"><i onclick="params.funcs.closeSearchBox()" class="fa fa-times" aria-hidden="true"></i></div>
-      <div class="input-wrapper">
-        <input type="text" class="search-input" placeholder="Search" />
-        <div class="input-bottom-placeholder">By Firstname, Lastname, Tags</div>
-      </div>
-      <div>
-      </div>
-    </div>
-    <div class="result-box">
-      <div class="result-header"> RESULTS </div>
-      <div class="result-list">
-
-
-        <div class="buffer"></div>
-      </div>
-    </div>
-  </div>
   <div id="svgChart"></div>
 </div>
 
@@ -632,7 +588,8 @@ text {
   data: null
 }
 
-d3.json(params.dataLoadUrl, function(data) {
+//d3.json(params.dataLoadUrl, function(data) {
+d3.json("examples/tree1.json", function(data) {
   params.data = data;
   params.pristinaData = JSON.parse(JSON.stringify(data));
 
@@ -696,10 +653,14 @@ function drawOrganizationChart(params) {
     .attr("transform", "translate(" + attrs.width / 2 + "," + 20 + ")");
 
   // Add legend
-  /*svg.append("circle").attr("cx",200).attr("cy",130).attr("r", 6).style("fill", "#69b3a2")
-svg.append("circle").attr("cx",200).attr("cy",160).attr("r", 6).style("fill", "#404080")
-svg.append("text").attr("x", 220).attr("y", 130).text("variable A").style("font-size", "15px").attr("alignment-baseline","middle")
-svg.append("text").attr("x", 220).attr("y", 160).text("variable B").style("font-size", "15px").attr("alignment-baseline","middle")*/
+  console.log(attrs.width);
+  console.log(attrs.height);
+  svg.append("circle").attr("cx",600).attr("cy",130).attr("r", 6).style("fill", "#4287F5")
+  svg.append("circle").attr("cx",600).attr("cy",160).attr("r", 6).style("fill", "#0E8C7F")
+  svg.append("circle").attr("cx",600).attr("cy",190).attr("r", 6).style("fill", "#B34E56")
+  svg.append("text").attr("x", 620).attr("y", 130).text("TABLE").style("font-size", "15px").attr("alignment-baseline","middle")
+  svg.append("text").attr("x", 620).attr("y", 160).text("VIEW").style("font-size", "15px").attr("alignment-baseline","middle")
+  svg.append("text").attr("x", 620).attr("y", 190).text("INDEX").style("font-size", "15px").attr("alignment-baseline","middle")
 
   //necessary so that zoom knows where to zoom and unzoom from
   zoomBehaviours.translate([dynamic.rootNodeLeftMargin, attrs.rootNodeTopMargin]);
